--- a/ts-food-delivery-service/src/main/resources/application.yml
+++ b/ts-food-delivery-service/src/main/resources/application.yml
@@ -2,18 +2,13 @@ server:
   port: 18957
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-          server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
-#          server-addr: 10.176.122.80:8848
   application:
     name: ts-food-delivery-service
   datasource:
 #    url: jdbc:mysql://localhost:30001/ts-food-delivery-mysql?useSSL=false
-    url: jdbc:mysql://${FOOD_DELIVERY_MYSQL_HOST:ts-food-delivery-mysql}:${FOOD_DELIVERY_MYSQL_PORT:3306}/${FOOD_DELIVERY_MYSQL_DATABASE:ts-food-delivery-mysql}?useSSL=false
+    url: jdbc:mysql://${FOOD_DELIVERY_MYSQL_HOST:ts-food-delivery-mysql}:${FOOD_DELIVERY_MYSQL_PORT:3306}/${FOOD_DELIVERY_MYSQL_DATABASE:ts}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: ${FOOD_DELIVERY_MYSQL_USER:root}
-    password: ${FOOD_DELIVERY_MYSQL_PASSWORD:root}
+    password: ${FOOD_DELIVERY_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
@@ -21,6 +16,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
 
 swagger:
   controllerPackage: fooddelivery.controller
