--- a/ts-wait-order-service/src/main/resources/application.yml
+++ b/ts-wait-order-service/src/main/resources/application.yml
@@ -3,14 +3,10 @@ server:
   port: 17525  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:127.0.0.1:8848}
   application:
     name: ts-wait-order-service
   datasource:
-    url: jdbc:mysql://${WAIT_ORDER_MYSQL_HOST:10.176.122.1}:${WAIT_ORDER_MYSQL_PORT:3306}/${WAIT_ORDER_MYSQL_DATABASE:ts}?useSSL=false
+    url: jdbc:mysql://${WAIT_ORDER_MYSQL_HOST:10.176.122.1}:${WAIT_ORDER_MYSQL_PORT:3306}/${WAIT_ORDER_MYSQL_DATABASE:ts}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: ${WAIT_ORDER_MYSQL_USER:root}
     password: ${WAIT_ORDER_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -21,5 +17,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
+
 swagger:
   controllerPackage: waitorder.controller
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
