--- a/ts-travel-plan-service/src/main/resources/application.yml
+++ b/ts-travel-plan-service/src/main/resources/application.yml
@@ -3,13 +3,15 @@ server:
   port: 14322  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-travel-plan-service
 
 
 swagger:
   controllerPackage: travelplan.controller
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
