--- a/ts-rebook-service/src/main/resources/application.yml
+++ b/ts-rebook-service/src/main/resources/application.yml
@@ -3,14 +3,16 @@ server:
   port: 18886  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-rebook-service
 swagger:
   controllerPackage: rebook.controller
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
 #  rabbitmq:
 #    host: rabbitmq
 #    listener:
