--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,67 +30,142 @@ services:
     networks:
       - my-network
 
-  ts-security-service:
-    image: ${NAMESPACE}/ts-security-service:${TAG}
-    restart: always
-    container_name: ts-security-service
-    hostname: ts-security-service
-    ports:
-      - 11188:11188
-    networks:
-      - my-network
-    environment:
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
-      - SECURITY_MYSQL_HOST=ts-price-mysql
-      - SECURITY_MYSQL_PORT=3306
-      - SECURITY_MYSQL_DATABASE=ts
-      - SECURITY_MYSQL_USER=root
-      - SECURITY_MYSQL_PASSWORD=zhaoyiming.18
+#  ts-payment-service:
+#    image: ${NAMESPACE}/ts-payment-service:${TAG}
+#    restart: always
+#    container_name: ts-payment-service
+#    hostname: ts-payment-service
+#    ports:
+#      - 19001:19001
+#    networks:
+#      - my-network
+#    environment:
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
+#      - PAYMENT_MYSQL_HOST=ts-price-mysql
+#      - PAYMENT_MYSQL_PORT=3306
+#      - PAYMENT_MYSQL_DATABASE=ts
+#      - PAYMENT_MYSQL_USER=root
+#      - PAYMENT_MYSQL_PASSWORD=zhaoyiming.18
+#    depends_on:
+#      - ts-discovery-service
+#      - ts-price-mysql
 
-  ts-travel-plan-service:
-    image: ${NAMESPACE}/ts-travel-plan-service:${TAG}
+  ts-notification-service:
+    image: ${NAMESPACE}/ts-notification-service:${TAG}
     restart: always
-    container_name: ts-travel-plan-service
-    hostname: ts-travel-plan-service
+    container_name: ts-notification-service
+    hostname: ts-notification-service
     ports:
-      - 14322:14322
+      - 17853:17853
     networks:
       - my-network
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
+      - NOTIFICATION_MYSQL_HOST=ts-price-mysql
+      - NOTIFICATION_MYSQL_PORT=3306
+      - NOTIFICATION_MYSQL_DATABASE=ts
+      - NOTIFICATION_MYSQL_USER=root
+      - NOTIFICATION_MYSQL_PASSWORD=zhaoyiming.18
       - RABBITMQ_HOST=rabbitmq
     depends_on:
       - ts-discovery-service
+      - ts-price-mysql
+      - rabbitmq
 
-  ts-route-plan-service:
-    image: ${NAMESPACE}/ts-route-plan-service:${TAG}
+  ts-inside-payment-service:
+    image: ${NAMESPACE}/ts-inside-payment-service:${TAG}
     restart: always
-    container_name: ts-route-plan-service
-    hostname: ts-route-plan-service
+    container_name: ts-inside-payment-service
+    hostname: ts-inside-payment-service
     ports:
-      - 14578:14578
+      - 18673:18673
     networks:
       - my-network
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
-      - RABBITMQ_HOST=rabbitmq
+      - INSIDE_PAYMENT_MYSQL_HOST=ts-price-mysql
+      - INSIDE_PAYMENT_MYSQL_PORT=3306
+      - INSIDE_PAYMENT_MYSQL_DATABASE=ts
+      - INSIDE_PAYMENT_MYSQL_USER=root
+      - INSIDE_PAYMENT_MYSQL_PASSWORD=zhaoyiming.18
     depends_on:
       - ts-discovery-service
+      - ts-price-mysql
 
-  ts-rebook-service:
-    image: ${NAMESPACE}/ts-rebook-service:${TAG}
-    restart: always
-    container_name: ts-rebook-service
-    hostname: ts-rebook-service
-    ports:
-      - 18886:18886
-    networks:
-      - my-network
-    environment:
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
-    depends_on:
-      - ts-discovery-service
+#  ts-cancel-service:
+#    image: ${NAMESPACE}/ts-cancel-service:${TAG}
+#    restart: always
+#    container_name: ts-cancel-service
+#    hostname: ts-cancel-service
+#    ports:
+#      - 18753:18753
+#    networks:
+#      - my-network
+#    environment:
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
+#    depends_on:
+#      - ts-discovery-service
 
+#  ts-security-service:
+#    image: ${NAMESPACE}/ts-security-service:${TAG}
+#    restart: always
+#    container_name: ts-security-service
+#    hostname: ts-security-service
+#    ports:
+#      - 11188:11188
+#    networks:
+#      - my-network
+#    environment:
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
+#      - SECURITY_MYSQL_HOST=ts-price-mysql
+#      - SECURITY_MYSQL_PORT=3306
+#      - SECURITY_MYSQL_DATABASE=ts
+#      - SECURITY_MYSQL_USER=root
+#      - SECURITY_MYSQL_PASSWORD=zhaoyiming.18
+#
+#  ts-travel-plan-service:
+#    image: ${NAMESPACE}/ts-travel-plan-service:${TAG}
+#    restart: always
+#    container_name: ts-travel-plan-service
+#    hostname: ts-travel-plan-service
+#    ports:
+#      - 14322:14322
+#    networks:
+#      - my-network
+#    environment:
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
+#      - RABBITMQ_HOST=rabbitmq
+#    depends_on:
+#      - ts-discovery-service
+#
+#  ts-route-plan-service:
+#    image: ${NAMESPACE}/ts-route-plan-service:${TAG}
+#    restart: always
+#    container_name: ts-route-plan-service
+#    hostname: ts-route-plan-service
+#    ports:
+#      - 14578:14578
+#    networks:
+#      - my-network
+#    environment:
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
+#      - RABBITMQ_HOST=rabbitmq
+#    depends_on:
+#      - ts-discovery-service
+#
+#  ts-rebook-service:
+#    image: ${NAMESPACE}/ts-rebook-service:${TAG}
+#    restart: always
+#    container_name: ts-rebook-service
+#    hostname: ts-rebook-service
+#    ports:
+#      - 18886:18886
+#    networks:
+#      - my-network
+#    environment:
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://ts-discovery-service:8761/eureka/
+#    depends_on:
+#      - ts-discovery-service
 
 #  ts-food-service:
 #    image: ${NAMESPACE}/ts-food-service:${TAG}
