--- a/ts-notification-service/src/main/resources/application.yml
+++ b/ts-notification-service/src/main/resources/application.yml
@@ -3,10 +3,6 @@ server:
   port: 17853  # HTTP (Tomcat) port
 
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: ${NACOS_ADDRS:nacos-0.nacos-headless.default.svc.cluster.local,nacos-1.nacos-headless.default.svc.cluster.local,nacos-2.nacos-headless.default.svc.cluster.local}
   application:
     name: ts-notification-service
   mail:
@@ -24,9 +20,9 @@ spring:
             enable: true
             required: true
   datasource:
-    url: jdbc:mysql://${NOTIFICATION_MYSQL_HOST:ts-notification-mysql}:${NOTIFICATION_MYSQL_PORT:3306}/${NOTIFICATION_MYSQL_DATABASE:ts-notification-mysql}?useSSL=false
+    url: jdbc:mysql://${NOTIFICATION_MYSQL_HOST:ts-notification-mysql}:${NOTIFICATION_MYSQL_PORT:3306}/${NOTIFICATION_MYSQL_DATABASE:ts}?useSSL=false
     username: ${NOTIFICATION_MYSQL_USER:root}
-    password: ${NOTIFICATION_MYSQL_PASSWORD:root}
+    password: ${NOTIFICATION_MYSQL_PASSWORD:zhaoyiming.18}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -36,9 +32,15 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
   rabbitmq:
-    host: ${rabbitmq_host:localhost}
+    host: ${RABBITMQ_HOST:ts-rabbitmq}
     port: 5672
 
 
 swagger:
   controllerPackage: notification.controller
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://127.0.0.1:8761/eureka/}
+      preferIpAddress: true
