--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,16 @@
     <modules>
         <module>ts-discovery-service</module>
         <module>ts-common</module>
-        <module>ts-notification-service</module>
+        <module>ts-order-other-service</module>
+        <module>ts-order-service</module>
+        <module>ts-order-service-02</module>
+        <module>ts-order-other-service-02</module>
     </modules>
        <!--
+       <module>ts-admin-basic-info-service</module>
+       <module>ts-admin-basic-info-service-02</module>
+       <module>ts-admin-basic-info-service-03</module>
+       <module>ts-notification-service</module>
        <module>ts-inside-payment-service</module>
        <module>ts-payment-service</module>
        <module>ts-cancel-service</module>
@@ -39,7 +46,6 @@
        <module>ts-assurance-service</module>
        <module>ts-admin-user-service</module>
        <module>ts-admin-route-service</module>
-       <module>ts-admin-basic-info-service</module>
        <module>ts-admin-travel-service</module>
        <module>ts-price-service</module>
        <module>ts-train-food-service</module>
@@ -47,8 +53,6 @@
        <module>ts-contacts-service</module>
        <module>ts-train-service</module>
        <module>ts-route-service</module>
-       <module>ts-order-other-service</module>
-       <module>ts-order-service</module>
        <module>ts-seat-service</module>
        <module>ts-basic-service</module>
        <module>ts-consign-price-service</module>
